<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="refresh">Refresh</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="roles">Roles</string>

    <string name="no_internet">No network. Please check your Internet connection and try again.</string>
</resources>
